[gd_scene load_steps=19 format=2]

[ext_resource path="res://CharacterCreation.gd" type="Script" id=1]
[ext_resource path="res://entities/player/$player-Sheet.png" type="Texture" id=2]
[ext_resource path="res://ui/buttons/LE_Arrow_Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/UI_theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/CharacterScreen.png" type="Texture" id=5]
[ext_resource path="res://ui/buttons/LE_Button.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FadeTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.709804 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.364706 ), Color( 0, 0, 0, 0.862745 ) ]
}

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 192, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 288, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 288, 480, 96, 96 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="CharacterCreation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/fade_in = SubResource( 10 )
anims/fade_out = SubResource( 12 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 319.5, 181.5 )
scale = Vector2( 1.00156, 1.00278 )
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 505, 169 )
scale = Vector2( 2.82292, 2.99479 )
frames = SubResource( 9 )
animation = "idle"
frame = 6
playing = true

[node name="Lbl_CharAttr" type="Label" parent="."]
margin_left = 96.0
margin_top = 33.0
margin_right = 237.0
margin_bottom = 50.0
text = "Character Attributes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lbl_RemPnts" type="Label" parent="."]
margin_left = 48.0
margin_top = 65.0
margin_right = 192.0
margin_bottom = 82.0
text = "Points remaining: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cmdr_HBox" type="HBoxContainer" parent="."]
margin_left = 48.0
margin_top = 97.0
margin_right = 191.0
margin_bottom = 124.0

[node name="Lbl_Cmdr" type="Label" parent="Cmdr_HBox"]
margin_top = 5.0
margin_right = 86.0
margin_bottom = 22.0
text = "Commander:"

[node name="Pts_Label" type="Label" parent="Cmdr_HBox"]
margin_left = 90.0
margin_top = 5.0
margin_right = 99.0
margin_bottom = 22.0
text = "5"

[node name="ArrowCont" type="Control" parent="Cmdr_HBox"]
margin_left = 103.0
margin_right = 103.0
margin_bottom = 27.0

[node name="Up_Arrow" parent="Cmdr_HBox/ArrowCont" instance=ExtResource( 3 )]
margin_left = 1.0
margin_top = 4.0
margin_right = 1.0
margin_bottom = 31.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="Down_Arrow" parent="Cmdr_HBox/ArrowCont" instance=ExtResource( 3 )]
margin_left = 9.0
margin_top = 22.0
margin_right = 9.0
margin_bottom = 49.0
rect_rotation = 180.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="Bio_HBox" type="HBoxContainer" parent="."]
margin_left = 48.0
margin_top = 145.0
margin_right = 191.0
margin_bottom = 172.0

[node name="Lbl_Bio" type="Label" parent="Bio_HBox"]
margin_top = 5.0
margin_right = 63.0
margin_bottom = 22.0
text = "Biologist:"

[node name="Pts_Label" type="Label" parent="Bio_HBox"]
margin_left = 67.0
margin_top = 5.0
margin_right = 76.0
margin_bottom = 22.0
text = "5"

[node name="ArrowCont" type="Control" parent="Bio_HBox"]
margin_left = 80.0
margin_right = 80.0
margin_bottom = 27.0

[node name="Up_Arrow" parent="Bio_HBox/ArrowCont" instance=ExtResource( 3 )]
margin_left = 1.0
margin_top = 4.0
margin_right = 1.0
margin_bottom = 31.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="Down_Arrow" parent="Bio_HBox/ArrowCont" instance=ExtResource( 3 )]
margin_left = 9.0
margin_top = 22.0
margin_right = 9.0
margin_bottom = 49.0
rect_rotation = 180.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="Engr_HBox" type="HBoxContainer" parent="."]
margin_left = 48.0
margin_top = 193.0
margin_right = 191.0
margin_bottom = 220.0

[node name="Lbl_Engr" type="Label" parent="Engr_HBox"]
margin_top = 5.0
margin_right = 63.0
margin_bottom = 22.0
text = "Engineer:"

[node name="Pts_Label" type="Label" parent="Engr_HBox"]
margin_left = 67.0
margin_top = 5.0
margin_right = 76.0
margin_bottom = 22.0
text = "5"

[node name="ArrowCont" type="Control" parent="Engr_HBox"]
margin_left = 80.0
margin_right = 80.0
margin_bottom = 27.0

[node name="Up_Arrow" parent="Engr_HBox/ArrowCont" instance=ExtResource( 3 )]
margin_left = 1.0
margin_top = 4.0
margin_right = 1.0
margin_bottom = 31.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="Down_Arrow" parent="Engr_HBox/ArrowCont" instance=ExtResource( 3 )]
margin_left = 9.0
margin_top = 22.0
margin_right = 9.0
margin_bottom = 49.0
rect_rotation = 180.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="Doc_HBox" type="HBoxContainer" parent="."]
margin_left = 48.0
margin_top = 241.0
margin_right = 191.0
margin_bottom = 268.0

[node name="Lbl_Doc" type="Label" parent="Doc_HBox"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 22.0
text = "Doctor:"

[node name="Pts_Label" type="Label" parent="Doc_HBox"]
margin_left = 54.0
margin_top = 5.0
margin_right = 63.0
margin_bottom = 22.0
text = "5"

[node name="ArrowCont" type="Control" parent="Doc_HBox"]
margin_left = 67.0
margin_right = 67.0
margin_bottom = 27.0

[node name="Up_Arrow" parent="Doc_HBox/ArrowCont" instance=ExtResource( 3 )]
margin_left = 1.0
margin_top = 4.0
margin_right = 1.0
margin_bottom = 31.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="Down_Arrow" parent="Doc_HBox/ArrowCont" instance=ExtResource( 3 )]
margin_left = 9.0
margin_top = 22.0
margin_right = 9.0
margin_bottom = 49.0
rect_rotation = 180.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="Launch_Btn" parent="." instance=ExtResource( 6 )]
margin_left = 452.0
margin_top = 309.0
margin_right = 452.0
margin_bottom = 309.0
rect_scale = Vector2( 1.5, 1.5 )
button_text = "LAUNCH"

[node name="CharName_HBox" type="HBoxContainer" parent="."]
margin_left = 48.0
margin_top = 281.0
margin_right = 288.0
margin_bottom = 321.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CharName_HBox"]
margin_top = 11.0
margin_right = 42.0
margin_bottom = 28.0
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="CharName_HBox"]
margin_left = 46.0
margin_right = 266.0
margin_bottom = 40.0
rect_min_size = Vector2( 220, 0 )
max_length = 20
placeholder_text = "Choose your name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeTransition" type="ColorRect" parent="."]
visible = false
margin_left = -3.0
margin_top = -1.0
margin_right = 641.0
margin_bottom = 363.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_pressed" from="Launch_Btn" to="." method="_on_Launch_Btn_button_pressed"]
[connection signal="text_changed" from="CharName_HBox/LineEdit" to="." method="_on_LineEdit_text_changed"]
